--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -9,4 +9,9 @@ html {
 }
 
 /* Write your solution here */
-
+@media screen and (max-width: 1300px) and (min-width: 600px) {
+     #ostrich {
+       position: absolute;
+       top: -50px;
+     }
+   }
